--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@ lilás: #5f2c82
 }
 
 body, html {
-    background-color: #5f2c82;
+    background-image: linear-gradient(to top, #49a09d, #5f2c82);
     height: 100vh;
     width: 100vw;
 }
@@ -24,7 +24,7 @@ main {
     width: 100vw;
 }
 
-#login {
+section#login {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -36,6 +36,9 @@ main {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.450);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 div#imagem {
