--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -19,19 +19,22 @@ Grandes telas: acima de 1200px
     div#imagem {
         float: left;
         width: 30%;
-        height:100%
+        height:100%;
+        background-position: right bottom ;
+
+    
     }
     
     div#formulario {
         float: right;
-        width:70%
+        width:60%;
     }
 }
 
 @media screen and (min-width:992px) {
 
     section#login {
-        width: 950px    
+        width: 950px;    
     }
 
     div#imagem {
