--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,9 +43,9 @@ section#login {
 
 div#imagem {
     display: block;
-    background: #5f2c82 url(../imagens/pexels-scottwebb-139205.jpg) no-repeat;
+    background: #5f2c82 url(../imagens/pexels-luis-ruiz-1774931.jpg) no-repeat;
     background-size: cover;
-    background-position: left bottom;
+    background-position: left center;
     height: 200px;
 }
 
