organizando as posição das imagens

--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -41,6 +41,7 @@ Grandes telas: acima de 1200px
         float: right;
         width:50%;
         height: 100%;
+        background-position: bottom center;
     }
 
     div#formulario {
