--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -14,15 +14,14 @@ Grandes telas: acima de 1200px
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     div#imagem {
         float: left;
-        width: 30%;
+        width: 40%;
         height:100%;
-        background-position: right bottom ;
-
-    
+        background-position: right bottom ;   
     }
     
     div#formulario {
@@ -34,7 +33,8 @@ Grandes telas: acima de 1200px
 @media screen and (min-width:992px) {
 
     section#login {
-        width: 950px;    
+        width: 950px;
+        height: 290px;    
     }
 
     div#imagem {
@@ -54,6 +54,6 @@ Grandes telas: acima de 1200px
     }
 
     div#formulario > p {
-    font-size: 1.2em;
+    font-size: 1em;
     }
 }
